benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_Mul_Add_iter4_error.log
=== Verification Error - Iteration 4 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_Mul_Add.rs
Time: 2025-09-15 20:16:11

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:53:12
   |
53 |       if a@[index] == '1' {
   |            ^^^^^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:63:12
   |
63 |       if b@[index] == '1' {
   |            ^^^^^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:131:30
    |
131 |   while res.len() > 1 && res@[0] == '0' {
    |                              ^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0608`.

--------------------------------------------------------------------------------

Additional Output:
error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:53:12
   |
53 |       if a@[index] == '1' {
   |            ^^^^^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:63:12
   |
63 |       if b@[index] == '1' {
   |            ^^^^^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_impl.rs:131:30
    |
131 |   while res.len() > 1 && res@[0] == '0' {
    |                              ^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0608`.
